tests/errors/4_type_errors/sample9.ifj16.java
class Main {
    static String a;
    static void run(){}
    static void run2(int a, double b) {
        Main.a = ifj16.readInt(); // lvalue is string
    }
}

